# actix-web-clean-architecture-sample

./: -  Cargo.toml  README.md
src/: error.rs  main.rs
src/domain/: news.rs
src/driver/: mod.rs  news_driver.rs
src/gateway/: mod.rs  news_gateway.rs
src/port/: mod.rs  news_port.rs
src/rest/: mod.rs  news.rs  systems.rs
src/usecase/: mod.rs  news_get_usecase.rs
