[package]
name = "actix-web-sample"
version = "0.1.0"
authors = ["Takanori Ishibashi <takanori.1112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.0"
actix-http = "1.0.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
log = "0.4.0"
env_logger = "0.7.1"
dotenv = "0.15.0"
failure = "0.1.6"
serde = "1.0.104"
serde_json = "1.0"
async-trait = "0.1.22"

[profile.release]
opt-level = 'z'